@@ -19,18 +19,15 @@
     </compilerArgs>
     </configuration>
     </plugin>
-
-  <plugin>
-  <groupId>org.codehaus.mojo</groupId>
-  <artifactId>exec-maven-plugin</artifactId>
-  <version>3.1.0</version>
-  <configuration>
-    <mainClass>hospital.views.NewUser</mainClass>
-    <arguments>
-      <argument>--enable-preview</argument>
-    </arguments>
+<plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>3.1.0</version>
+    <configuration>
+        <mainClass>hospital.views.NewUser</mainClass>
     </configuration>
-    </plugin>
+</plugin>
+  
     </plugins>
     </build>
     <properties>
